cabal-version: 3.8
name: dokan
version: 0.1.0.0
license: NONE
author: mtwtkman
maintainer: 924277+mtwtkman@users.noreply.github.com
extra-doc-files: README.md

common warnings
  ghc-options: -Wall

executable dokan
  import: warnings
  main-is: Main.hs
  build-depends:
    async,
    base ^>=4.18.3.0,
    dokan,
    mtl,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  hs-source-dirs: app
  default-language: Haskell2010

library
  import: warnings
  build-depends:
    base,
    bytestring,
    case-insensitive,
    containers,
    data-default,
    dns,
    http-client,
    http-types,
    iproute,
    mtl,
    network,
    network-uri,
    stm,
    text,
    tls,
    vault,
    wai,
    warp,
    warp-tls,
    yaml,

  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Dokan
    Dokan.Config
    Dokan.Listener.App
    Dokan.Listener.Http
    Dokan.Listener.Https
    Dokan.Listener.Dns
    Dokan.Proxy.Headers
    Dokan.Proxy.Transfer
    Dokan.Types
    Dokan.Utils
